# fancifypy

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/fancifypy/: __main__.py  cli.py  fancifier.py
