[project]
name = "fancifypy"
version = "0.1.0"
description = "Code formatter to get less boring Python files"
authors = [
    {name = "Yngve Mardal Moe", email = "yngve.m.moe@gmail.com"},
]
dependencies = ["typer"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
fancifypy = "fancifypy.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[tool.ruff.lint]
select = ["I"]