[project]
name = "fancifypy"
description = "Code formatter to get less boring Python files"
authors = [
    {name = "Yngve Mardal Moe", email = "yngve.m.moe@gmail.com"},
]
dependencies = ["typer"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.scripts]
fancifypy = "fancifypy.cli:main"

[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[tool.ruff.lint]
select = ["I"]